package com.projetchat.client;

import com.projetchat.client.vue.ClientViewer;

/**
 * La classe servant de lanceur pour le client.
 */
public class Main {
    /**
     * Le programme principale.
     *
     * @param args Les arguments de lancement.
     */
    public static void main(String[] args) {
        ClientViewer.main(args);
    }
}
